syntax = "proto3";

// this will the proto compiler where the output will be
option go_package = "go_grpc/proto";

// Here we define like a namespace, so that all the code
// will be under this particular name
package personService;

service PersonService {
    rpc Create(CreatePersonRequest) returns (PersonProfileResponse);
    rpc Read(SinglePersonRequest) returns (PersonProfileResponse);
    rpc Update(UpdatePersonRequest) returns (SuccessResponse);
    rpc Delete(SinglePersonRequest) returns (SuccessResponse);
}

message CreatePersonRequest {
    string name = 1;
    string email = 2;
    string phoneNumber = 3;
}

message PersonProfileResponse {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string phoneNumber = 4;
}

message SinglePersonRequest {
    int32 id = 1;
}

message UpdatePersonRequest {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string phoneNumber = 4;
}

message SuccessResponse {
    string response = 1;
}
